fix alignment issue for dashboard

--- a/src/components/KycScreens/Dashboard/styles.module.css
+++ b/src/components/KycScreens/Dashboard/styles.module.css
@@ -92,7 +92,7 @@
 }
 
 .progressBarContainer {
-  @apply mt-2 mx-4 w-full h-[30px] rounded-xl bg-[#d9d9d9] mb-8;
+  @apply mt-2 w-full h-[30px] rounded-xl bg-[#d9d9d9] mb-8;
 }
 .progressBar {
   @apply h-[30px] bg-[#67AF7B] items-center;
